# Vision-LLM-CPP

./: CMakeLists.txt  README.md
.github/workflows/: paddle_build.yml  qwen_build.yml
core/: ocr_engine.cpp  ocr_engine.h
ocr_library/: CMakeLists.txt  ocr_engine.cpp  ocr_engine.h
scripts/: build_android.sh  build_qwen_android.sh  build_qwen_windows.ps1  build_windows.ps1
